[package]
name = "gitlab-action-radar"
version = "0.1.0"
description = "Menu bar GitLab MR health radar"
authors = ["you"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
open = "5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-store = "2"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
